Added category and product details pages

--- a/index.html
+++ b/index.html
@@ -53,9 +53,17 @@
         </div>
         <div class="header-main row">
             <div class="col s2 logodiv">
-                <img src="assets/images/header-logo.svg" class="responsive-img mainLogo" srcset="">
+                <a href="index.html"><img src="assets/images/header-logo.svg" class="responsive-img mainLogo" srcset=""></a>
             </div>
-            <nav style="background-color:transparent;box-shadow: none">
+            <div class="col s4">
+                <div id="searchbarTop">
+                    <div class="input-field">
+                            <i class="material-icons prefix">search</i>
+                            <input type="text" placeholder="Search" class="">
+                    </div>
+                </div>
+            </div>
+            <!-- <nav style="background-color:transparent;box-shadow: none">
                 <div class="nav-wrapper" >
                    <div class="searchbar left">
 
@@ -67,7 +75,7 @@
                        <li><a href="">E-magazine</a></li>
                    </ul>
                 </div>
-            </nav>
+            </nav> -->
         </div>
     </section>
     <section class="carouselmain z-depth-3">
@@ -89,7 +97,7 @@
             <div class="row">
                 <div class="col s6">
                     <ul class="optionsgroup">
-                        <li class="optionsgroupitem"><span>Primary Care</span></li>
+                        <li class="optionsgroupitem"><a href="category.html"><span>Primary Care</span></a></li>
                         <li class="optionsgroupitem"><span>Primary Care</span></li>
                         <li class="optionsgroupitem"><span>Primary Care</span></li>
                         <li class="optionsgroupitem"><span>Primary Care</span></li>
@@ -117,7 +125,7 @@
                 <div class="col s2 " >
                     <div class="newProductItem z-depth-2">
                         <div class="productItemImage">
-                            <a href="">
+                            <a href="product.html">
                                 <img src="assets/images/p1.jpg" class="responsive-img" alt="" srcset="">
                             </a>
                         </div>
