Added Accordion and mediaqueries with other changes

--- a/product.html
+++ b/product.html
@@ -85,21 +85,24 @@
         <div class="mainProductDiv  row ">
                 
             <div class="col s5">
-                <div class="col s2">
+                <!-- <div class="col s2">
                     <img src="assets/images/p1.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p2.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p3.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p1.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p2.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p3.jpg" class="responsive-img z-depth-1" alt="" srcset="">
-                </div>
+                </div> -->
                 <img src="assets/images/p1.jpg" class="responsive-img z-depth-1" alt="" srcset="">
             </div>
             <!-- <div class="col s1"></div> -->
             <div class="col s6 productDetail ">
                 <span class="productTitle">Dental Stool-Plameca Olo/Plameca Olo-19231</span><br>
-                <span class="productBrand">Plameca Olo</span><br>
-                <span class="productId">Plameca Olo-19231</span><br>
+                <span class="productBrand">Product Name : <span style="color:rgb(7, 122, 156);">Plameca Olo</span> </span><br>
+                <span class="productId">Model: <span style="color:rgb(7, 122, 156);">Plameca Olo-19231</span></span><br>
+                <span class="productCategory">Category: <span style="color:rgb(7, 122, 156);">Primary Care</span> </span><br>
+                <span class="productDealer">Nepal Authorized Dealer: <span style="color:rgb(7, 122, 156);">Mentor IT</span></span><br>
+
                 <span class="productDescription"><span style="font-size:1.6em">Description:</span> <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure consectetur dicta delectus temporibus odit, quia ducimus adipisci eos magni nesciunt dolores soluta ea quasi molestias nobis voluptate ipsa sint ipsum repellat modi odio, hic corporis illum! Soluta quasi similique, pariatur ipsa, consectetur nulla iusto odio expedita magnam laboriosam modi placeat.</span><br><br>
                 <img src="assets/images/lo1.gif" alt="">
             </div>
