Edited The logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="header-main row">
             <div class="col s2 logodiv">
-                <a href="index.html"><img src="assets/images/header-logo.svg" class="responsive-img mainLogo" srcset=""></a>
+                <a href="index.html"><img src="assets/images/Medi Nepal.png" class="responsive-img mainLogo" srcset=""></a>
             </div>
             <div class="col s4">
                 <div id="searchbarTop">
