Removed title from product

--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
             </div>
             <!-- <div class="col s1"></div> -->
             <div class="col s6 productDetail ">
-                <span class="productTitle">Dental Stool-Plameca Olo/Plameca Olo-19231</span><br>
+                <!-- <span class="productTitle">Dental Stool-Plameca Olo/Plameca Olo-19231</span><br> -->
                 <span class="productBrand">Product Name : <span style="color:rgb(7, 122, 156);">Plameca Olo</span> </span><br>
                 <span class="productId">Model: <span style="color:rgb(7, 122, 156);">Plameca Olo-19231</span></span><br>
                 <span class="productCategory">Category: <span style="color:rgb(7, 122, 156);">Primary Care</span> </span><br>
