Made improvements to responsiveness

--- a/product.html
+++ b/product.html
@@ -84,7 +84,7 @@
     <div class="productDetails z-depth-3">
         <div class="mainProductDiv  row ">
                 
-            <div class="col s5">
+            <div class="col s5 imgContain">
                 <!-- <div class="col s2">
                     <img src="assets/images/p1.jpg" class="responsive-img z-depth-1" alt="" srcset="">
                     <img src="assets/images/p2.jpg" class="responsive-img z-depth-1" alt="" srcset="">
