--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="col s6">
                     <ul class="optionsgroup collapsible">
                         <li class="optionsgroupitem">
-                            <div class="collapsible-header"><span>Primary Care</span></div>
+                            <div class="collapsible-header" style="position: relative;"><span>Primary Care</span><i class="fas fa-angle-down" style="position: absolute;right:0;margin-right:0;color: rgb(107, 107, 107)"></i></div>
                             <ul class="collapsible-body">
                                 <li><a href="category.html">option 1</a>  </li>
                                 <li><a href="">option 2</a>  </li>
